--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<!-- Banner -->
 	<section class="banner full">
 		<article>
-			<img src="images/경희대정문.jpeg" alt="" />
+			<img src="images/kyunghee_main_entrance.jpeg" alt="" />
 			<div class="inner">
 				<header>
 					<h2>2018 Computer Engineer's Night 🌖</h2>
@@ -67,12 +67,12 @@
 	<footer id="footer">
 		<div class="container">
 			<ul class="icons">
-				<li><img src="images/컴밤_보조배터.png" width="150px" height="150px" alt="컴밤보조배터리" /></li>
-				<li><img src="images/컴밤_아이언맨.png" width="150px" height="150px" alt="컴밤아이언맨" /></li>
-				<li><img src="images/컴밤_제닉스.jpg" width="150px" height="150px" alt="컴밤제닉스" /></li>
-				<li><img src="images/컴밤_키보드.png" width="150px" height="150px" alt="컴밤키보드" /></li>
-				<li><img src="images/컴밤_카카오미니.jpg" width="150px" height="150px" alt="컴밤카카오미니" /></li>
-				<li><img src="images/컴밤_에어팟.jpg" width="150px" height="150px" alt="컴밤에어팟" /></li>
+				<li><img src="images/gift1.png" width="150px" height="150px" alt="컴밤보조배터리" /></li>
+				<li><img src="images/gift2.png" width="150px" height="150px" alt="컴밤아이언맨" /></li>
+				<li><img src="images/gift3.jpg" width="150px" height="150px" alt="컴밤제닉스" /></li>
+				<li><img src="images/gift4.png" width="150px" height="150px" alt="컴밤키보드" /></li>
+				<li><img src="images/gift5.JPG" width="150px" height="150px" alt="컴밤카카오미니" /></li>
+				<li><img src="images/gift6.jpg" width="150px" height="150px" alt="컴밤에어팟" /></li>
 
 			</ul>
 		</div>
